<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">final_android_lvl1</string>
    <string name="premieres">Узнавай \nо премьерах</string>
    <string name="friends">Делись \nс друзьями</string>
    <string name="skillcinema">skillcinema</string>
    <string name="skip">пропустить</string>
    <string name="create_collections">Создавай \nколлекции</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reconnect">повторить \n подключение</string>
    <string name="see_all">показать все</string>
    <string name="film">фильм</string>
    <string name="genre">жанар</string>
    <string name="all">все</string>
    <string name="collection">колекция</string>
    <string name="seasons_and_series">Сезоны и Серии</string>
    <string name="number_seasons_and_series">1 cезон, 7 серий</string>
    <string name="description">описание</string>
    <string name="slide">краткое описание</string>
    <string name="rating_name">8.0,волк с Уолл-стрит</string>
    <string name="years_genre">2000,милодрамма,приключения</string>
    <string name="country_time_old">Россия,time,18+</string>
    <string name="name_film">название фильма</string>
    <string name="table_of_contents">оглавление</string>
    <string name="count">%d</string>
    <string name="actors_name">Виталий Дымов</string>
    <string name="character">футболист</string>
    <string name="transaction">transaction</string>
    <string name="seanson">сериалы</string>
    <string name="count_years">2024</string>
    <string name="similar_films">Похожие фильмы</string>
    <string name="the_best">лучшее</string>
    <string name="gallery">Галерея</string>
    <string name="we_were_working_on_the_film">Над фильмом работали</string>
    <string name="the_film_was_filmed">В фильме снимались</string>
    <string name="URL_film">https://kinopoiskapiunofficial.tech/api/v2.2/films/%d</string>
    <string name="rating_and_name">%s%s</string>
    <string name="years_and_genre">%s,%s</string>
    <string name="country_and_time_old">%s,%s%s</string>
    <string name="no_photo_shooting">Изображения со съёмок нету</string>
    <string name="shooting">SHOOTING</string>
    <string name="poster">POSTER</string>
    <string name="no_poster">постеров не найденно</string>
    <string name="counter_film">%d фильмов</string>
    <string name="to_the_list">к списку</string>
    <string name="filmography">Фильмография</string>
    <string name="text_season_and_episodes">%d сезон, %d серий</string>
    <string name="view">Просмотренно</string>
    <string name="were_you_interested">Вам было интерестно</string>
    <string name="countries_english">countries</string>
    <string name="countries">Страна</string>
    <string name="genres_english">genres</string>
    <string name="period_of_years">поиск будет\nс %s до %s</string>
    <string name="clear_settings">настройки поиска\nпо годам, сброшаны</string>
    <string name="counter_period_of_years">%d-%d</string>
    <string name="error_period_max_years">выбранное число не может быть \nбольше числа "в периоде до"</string>
    <string name="error_period_min_years">выбранное число не может быть \nменьше числа "в периоде с" </string>
    <string name="max_years_film">это максимальный год\nвыходов фильмов</string>
    <string name="min_years_film">это минимальный год\nвыходов фильмов</string>
    <string name="period_film">от %d  до %d</string>
    <string name="any">любой</string>
    <string name="rating">Рейтинг</string>
    <string name="years">Год</string>
    <string name="search_settings">Настройки поиска</string>
    <string name="count_27">27</string>
    <string name="create_name">Придумайте название для \nвашей новой колекции до 38 букв</string>
    <string name="ready">Готово</string>
    <string name="the_request_failed">Во время обработки запроса \nпроизошла ошибка</string>
    <string name="error">Ошибка!</string>
    <string name="add_collection">Добавить в колекцию</string>
    <string name="create_collection">Создать колекцию</string>
    <string name="want_view">хочу посмотреть</string>
    <string name="URL_film_text">URL фильма:</string>
    <string name="enter_country">введите страну</string>
    <string name="cadres">кадры</string>
    <string name="photos_from_the_shooting">фото со съёмок</string>
    <string name="posters">постеры</string>
    <string name="plays_herself">играет саму себя</string>
    <string name="collections">Коллекции</string>
    <string name="film_actor_directors">Фильмы, актёры, режисёры</string>
    <string name="nothing_found_for_your_request">К сожалению, по вашему запросу\n              ничего не найдено </string>
    <string name="no_viewed">не просмотренно</string>
    <string name="popular">популярность</string>
    <string name="data">дата</string>
    <string name="sort">сортировать</string>
    <string name="show">показать</string>
    <string name="season">сезон</string>
    <string name="clear">Сбросить</string>
    <string name="search_in_the_period_to">искать в периоде до:</string>
    <string name="count_2100">2100</string>
    <string name="count_1700">1700</string>
    <string name="search_in_the_period_from">искать в периоде с:</string>
    <string name="topy">топи</string>
    <string name="drama">драма</string>
    <string name="favorite">любимое</string>
    <string name="range">2000-2012</string>
    <string name="dont_film_in_the_collection">вы ещё не добовляли\nфильмов в эту колекцию</string>
    <string name="one_series">1 серия. Введение</string>
    <string name="data_series">1 июля 2004 </string>
    <string name="counter_films">44 фильмов</string>
    <string name="country">Страна</string>
    <string name="specific_country">Россия</string>
</resources>