<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentetion.basic.search.filter_genre_country.YearFilterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/name_window"
            layout="@layout/main_item_collection_name" />

        <TextView
            android:id="@+id/text_years_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginVertical="10dp"
            android:text="@string/search_in_the_period_from"
            android:textColor="@color/teal_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_window" />

        <TextView
            android:id="@+id/text_From"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:text="@string/count_1700"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_years_from"
            app:layout_constraintStart_toEndOf="@+id/text_years_from"
            app:layout_constraintTop_toTopOf="@+id/text_years_from" />

        <LinearLayout
            android:id="@+id/layout_years_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:layout_constraintTop_toBottomOf="@+id/text_years_from">

            <include
                android:id="@+id/years_from"
                layout="@layout/main_item_filter_years" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_To"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:text="@string/count_2100"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_years_to"
            app:layout_constraintStart_toEndOf="@+id/text_years_to"
            app:layout_constraintTop_toTopOf="@+id/text_years_to" />

        <TextView
            android:id="@+id/text_years_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginVertical="10dp"
            android:text="@string/search_in_the_period_to"
            android:textColor="@color/teal_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_years_from" />

        <LinearLayout
            android:id="@+id/layout_years_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:layout_constraintTop_toBottomOf="@+id/text_years_to">

            <include
                android:id="@+id/years_to"
                layout="@layout/main_item_filter_years" />
        </LinearLayout>

        <Button
            android:id="@+id/button_ready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/ready"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_years_to" />

        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/clear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_years_to" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>