<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="30sp"
            android:layout_marginVertical="40dp"
            android:rotation="180"
            android:src="@drawable/next"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/photo_person"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30sp"

            app:layout_constraintStart_toStartOf="@+id/back"
            app:layout_constraintTop_toBottomOf="@+id/back"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:maxLength="16"
            android:maxLines="1"
            android:text="@string/actors_name"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/photo_person"
            app:layout_constraintTop_toTopOf="@+id/photo_person" />

        <TextView
            android:id="@+id/worker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:text="@string/character"
            android:textColor="@color/teal_200"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout_best_collection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_person">

            <include
                android:id="@+id/best_collection"
                layout="@layout/main_item_home" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/films"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:layout_marginVertical="10dp"
            android:text="@string/filmography"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_best_collection" />

        <TextView
            android:id="@+id/counter_film"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/counter_films"
            android:textColor="@color/teal_200"
            app:layout_constraintStart_toStartOf="@+id/films"
            app:layout_constraintTop_toBottomOf="@+id/films" />

        <LinearLayout
            android:id="@+id/layout_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/films">

            <TextView
                android:id="@+id/counter"
                style="@style/all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:text="@string/count_27" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/next"
                app:tint="@color/purple_700" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>